Dodati osnovni modeli

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,6 +1,12 @@
 {
   "MyDatabaseSettings": {
     "KartaCollectionName": "Karta",
+    "KlijentCollectionName": "Klijent",
+    "PredstavaCollectionName": "Predstava",
+    "RezervacijaCollectionName": "Rezervacija",
+    "SalaCollectionName": "Sala",
+    "ZahtevZaPovracajNovcaCollectionName": "ZahtevZaPovracajNovca",
+    "ZaposlenCollectionName": "Zaposlen",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "test"
   },
@@ -13,3 +19,4 @@
   },
   "AllowedHosts": "*"
 }
+
