Implementiran sistem obaveštenja za aktivne predstave

--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -7,6 +7,7 @@
     "SalaCollectionName": "Sala",
     "ZahtevZaPovracajNovcaCollectionName": "ZahtevZaPovracajNovca",
     "ZaposlenCollectionName": "Zaposlen",
+    "PushPretplateCollectionName": "PushPretplata",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "test"
   },
@@ -17,6 +18,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "VapidDetails": {
+    "Subject": "https://localhost:5002",
+    "PublicKey": "BMtMn89komUmRhkvdRxsf_w54bHPlwcqBNxg6HX4cWzpi9OPiOzAnP4jT8WiH8VmdikQGOM-F_rDJxpBaxpjSRs",
+    "PrivateKey": "T7H5s2UcyymIQktkCiTzvko8jsqZcffvYVGFVYExrE0"
+  }
 }
 
