--- a/Server/ClientApp/package.json
+++ b/Server/ClientApp/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@angular/service-worker": "^12.0.0",
+    "@stripe/stripe-js": "^1.15.0",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
