--- a/Server/ClientApp/.eslintrc.json
+++ b/Server/ClientApp/.eslintrc.json
@@ -36,7 +36,8 @@
             "type": "attribute"
           }
         ],
-        "object-curly-spacing": ["error", "always"]
+        "object-curly-spacing": ["error", "always"],
+        "indent": ["error", 2]
       }
     },
     {
