--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,12 +1,12 @@
 {
   "MyDatabaseSettings": {
     "KartaCollectionName": "Karta",
-    "KlijentCollectionName": "Klijent",
+    "KorisnikCollectionName": "Korisnik",
     "PredstavaCollectionName": "Predstava",
     "RezervacijaCollectionName": "Rezervacija",
     "SalaCollectionName": "Sala",
     "ZahtevZaPovracajNovcaCollectionName": "ZahtevZaPovracajNovca",
-    "ZaposlenCollectionName": "Zaposlen",
+    "IzvodjenjePredstaveCollectionName": "IzvodjenjePredstave",
     "PushPretplateCollectionName": "PushPretplata",
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "test"
