--- a/Server/ClientApp/package.json
+++ b/Server/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~11.2.12",
     "@angular/service-worker": "^12.0.0",
     "@stripe/stripe-js": "^1.15.0",
+    "jwt-decode": "^3.1.2",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
