Razrađen menadžment predstava i izvođenja

--- a/Server/ClientApp/package.json
+++ b/Server/ClientApp/package.json
@@ -18,12 +18,14 @@
     "@angular/core": "~11.2.12",
     "@angular/forms": "~11.2.12",
     "@angular/material": "^11.2.12",
+    "@angular/material-moment-adapter": "^11.2.13",
     "@angular/platform-browser": "~11.2.12",
     "@angular/platform-browser-dynamic": "~11.2.12",
     "@angular/router": "~11.2.12",
     "@angular/service-worker": "^12.0.0",
     "@stripe/stripe-js": "^1.15.0",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "ngx-material-timepicker": "^5.5.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
