--- a/Server/ClientApp/angular.json
+++ b/Server/ClientApp/angular.json
@@ -44,7 +44,7 @@
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "progress": false,
-            "outputPath": "dist/Pozoriste",
+            "outputPath": "dist",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
