--- a/PaymentService/appsettings.Production.json
+++ b/PaymentService/appsettings.Production.json
@@ -7,7 +7,12 @@
     }
   },
   "MyDatabaseSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://storage:27017",
     "DatabaseName": "test"
+  },
+  "DomainSettings": {
+    "ExternalDomain": "http://localhost",
+    "Server": "http://server",
+    "PaymentService": "http://payment"
   }
 }
