--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -28,8 +28,9 @@
   "TokenKey": "test test test test test ",
   "InitialAdminPassword": "admin1234",
   "DomainSettings": {
-    "MainDomain": "https://localhost:5001",
-    "PaymentServiceDomain": "http://localhost:6000"
+    "ExternalDomain": "https://localhost:5001",
+    "Server": "https://localhost:5001",
+    "PaymentService": "http://localhost:6000"
   }
 }
 
