Generisana Angular dokumentacija

--- a/Server/ClientApp/package.json
+++ b/Server/ClientApp/package.json
@@ -8,8 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "compodoc": "npx compodoc -p tsconfig.doc.json -s -w"
-
+    "compodoc": "compodoc -p tsconfig.doc.json"
   },
   "private": true,
   "dependencies": {
@@ -26,6 +25,7 @@
     "@angular/router": "~11.2.12",
     "@angular/service-worker": "^12.0.0",
     "@stripe/stripe-js": "^1.15.0",
+    "compodoc": "0.0.41",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "ngx-material-timepicker": "^5.5.3",
